set header to z-index 900 to avoid that the absolute bookmark buttons scroll over him

--- a/css-positioning_layout-with-position/css/styles.css
+++ b/css-positioning_layout-with-position/css/styles.css
@@ -17,6 +17,7 @@ body {
  * document is scrolled.
  */
 .header {
+  z-index: 900;
   position: fixed;
   top: 0px;
   left: 800px;
